--- a/index.html
+++ b/index.html
@@ -10,11 +10,14 @@
 	<link rel="stylesheet" href="./css/reset.css">
 	<link rel="stylesheet" href="./css/utils.css">
 	<link rel="stylesheet" href="./css/style.css">
+	<link rel="stylesheet" href="./css/header.css">
 </head>
 <body>
 
+	<!-- HEADER -->
 	<header>
 
+		<!-- UPPER HEADER -->
 		<nav>
 
 			<div class="nav-container">
@@ -36,6 +39,7 @@
 			</div>
 		</nav>
 
+		<!-- BOTTOM HEADER -->
 		<div class="bottom-header">
 			<div class="bottom-header-container">
 				<h1 class="bottom-header-title">Il tuo posto per parlare</h1>
@@ -48,23 +52,32 @@
 		</div>
   </header>
 
-
-
-
+	<!-- MAIN -->
 	<main>
 
-
-		<div class="second-section">
-			<div class="second-section-container">
-				<div class="second-section-container-left"></div>
-				<div class="second-section-container-right"></div>
+		<!-- FIRST SECTION -->
+		<div class="section first-section">
+			<div class="section-container">
+				<div class="section-container-image">
+					<img alt="discord-image" src="./img/item1.svg">
+				</div>
+				<div class="section-container-caption">
+					<h2 class="section-container-title">Un luogo a invito con tutto lo spazio necessario per parlare</h2>
+					<p class="section-container-text">I server Discord sono organizzati in canali telematici in cui puoi collaborare, condividere o semplicemente parlare della tua giornata senza intasare una chat di gruppo.</p>
+				</div>
 			</div>
 		</div>
 
-		<div class="third-section">
-			<div class="third-section-container">
-				<div class="third-section-container-left"></div>
-				<div class="third-section-container-right"></div>
+		<!-- SECOND SECTION -->
+		<div class="section second-section">
+			<div class="section-container">
+				<div class="section-container-caption">
+					<h2 class="section-container-title">Dove trovarsi è facile</h2>
+					<p class="section-container-text">Mettiti comodo in un canale vocale quando hai tempo. Gli amici nel tuo server possono vedere che sei lì e unirsi istantaneamnete senza dover chiamare.</p>
+				</div>
+				<div class="section-container-image">
+					<img alt="discord-second-image" src="./img/item2.svg">
+				</div>
 			</div>
 		</div>
 
