--- a/index.html
+++ b/index.html
@@ -81,10 +81,16 @@
 			</div>
 		</div>
 
-		<div class="second-section">
-			<div class="second-section-container">
-				<div class="second-section-container-left"></div>
-				<div class="second-section-container-right"></div>
+		<!-- THIRD SECTION -->
+		<div class="section third-section">
+			<div class="section-container">
+				<div class="section-container-image">
+					<img alt="discord-image" src="./img/item3.svg">
+				</div>
+				<div class="section-container-caption">
+					<h2 class="section-container-title">Da pochi a un fandom</h2>
+					<p class="section-container-text">Dai inizio a una community di qualsiasi dimensione con strumenti di moderazione e accesso ai membri pesonalizzabile. Concedi ai membri poteri speciali, crea canali privati, e molto altro.</p>
+				</div>
 			</div>
 		</div>
 
