--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 	<link rel="stylesheet" href="./css/utils.css">
 	<link rel="stylesheet" href="./css/style.css">
 	<link rel="stylesheet" href="./css/header.css">
+	<link rel="stylesheet" href="./css/footer.css">
 </head>
 <body>
 
@@ -45,7 +46,7 @@
 				<h1 class="bottom-header-title">Il tuo posto per parlare</h1>
 				<p class="bottom-header-text">Che tu faccia parte di un club scolastico, gruppo di gamer, comunità artistica mondiale, o semplicemente di un piccolo gruppo di amici che vuole passare il tempo assime, Discord rende più facile chiacchierare ogni giorno e ritrovarsi più spesso</p>
 				<div class="button-section">
-					<button class="download-button"><span class="down-arrow">&#8595;</span> Scarica per Mac</button>
+					<button class="download-button">&#8595; Scarica per Mac</button>
 					<button class="open-button">Apri discord nel tuo browser</button>
 			</div>
 			</div>
@@ -68,7 +69,14 @@
 			</div>
 		</div>
 
+		<!-- WAVY PATTERN-->
+
+		<div class="wavy-pattern">
+			<img alt="wavy pattern" src="./img/wave.svg">
+	  </div>
+
 		<!-- SECOND SECTION -->
+
 		<div class="section second-section">
 			<div class="section-container">
 				<div class="section-container-caption">
@@ -76,12 +84,19 @@
 					<p class="section-container-text">Mettiti comodo in un canale vocale quando hai tempo. Gli amici nel tuo server possono vedere che sei lì e unirsi istantaneamnete senza dover chiamare.</p>
 				</div>
 				<div class="section-container-image">
-					<img alt="discord-second-image" src="./img/item2.svg">
+					<img alt="discord-image" src="./img/item2.svg">
 				</div>
 			</div>
 		</div>
+    
+		<!-- WAVY PATTERN-->
+
+		<div class="wavy-pattern1">
+			<img alt="wavy pattern" src="./img/wave1.svg">
+	  </div>
 
 		<!-- THIRD SECTION -->
+
 		<div class="section third-section">
 			<div class="section-container">
 				<div class="section-container-image">
@@ -94,9 +109,26 @@
 			</div>
 		</div>
 
-		<div class="fifth-section">
-			<div class="fifth-section-container"></div>
+		<!-- WAVY PATTERN-->
+
+		<div class="wavy-pattern">
+			<img alt="wavy pattern" src="./img/wave.svg">
+	  </div>
+
+		<!-- FOURTH SECTION-->
+
+		<div class="section fourth-section">
+			<div class="section-container">
+				<h2 class="section-container-title">Tecnologia affidabile per tenersi in contatto</h2>
+				<p class="section-container-text">Video e audio a bassa latenza ti fanno sentire come se foste tutti nella stessa stanza. Fai ciao in video, guarda gli amici giocare in streaming, o riunitevi in una sessione di disegno con la condivisione schermo</p>
+				<img alt="discord-image" src="./img/item4-big.svg">
+				<img alt="stars pattern" src="./img/stars.svg">
+				<h2 class="section-container-title-small">Ponto a iniziare la tua avventura?</h2>
+				<button class="download-button">&#8595; Scarica per Mac</button>
+			</div>
 		</div>
+
+
 
 		<div class="sixth-section">
 			<div class="sixth-section-container">
@@ -115,6 +147,6 @@
 				<div class="footer-right-section">Bottone</div>
 			</div>
 	</footer>
-</body>
+</body> 
 
 </html>
