--- a/index.html
+++ b/index.html
@@ -123,30 +123,75 @@
 				<p class="section-container-text">Video e audio a bassa latenza ti fanno sentire come se foste tutti nella stessa stanza. Fai ciao in video, guarda gli amici giocare in streaming, o riunitevi in una sessione di disegno con la condivisione schermo</p>
 				<img alt="discord-image" src="./img/item4-big.svg">
 				<img alt="stars pattern" src="./img/stars.svg">
-				<h2 class="section-container-title-small">Ponto a iniziare la tua avventura?</h2>
+				<h3 class="section-container-title">Ponto a iniziare la tua avventura?</h2>
 				<button class="download-button">&#8595; Scarica per Mac</button>
-			</div>
-		</div>
-
-
-
-		<div class="sixth-section">
-			<div class="sixth-section-container">
-				<div class="sixth-section-container-left"></div>
-				<div class="sixth-section-container-right-one"></div>
-				<div class="sixth-section-container-right-two"></div>
-				<div class="sixth-section-container-right-three"></div>
-				<div class="sixth-section-container-right-four"></div>
 			</div>
 		</div>
 	</main>
 
-	<footer>
-			<div class="footer-container">
-				<div class="footer-left-section">Logo</div>
-				<div class="footer-right-section">Bottone</div>
-			</div>
-	</footer>
-</body> 
+	<!-- FOOTER-->
 
+	<footer>
+
+		<!-- UPPER FOOTER-->
+		<div class="upper-footer">
+			<div class="upper-footer-container">
+				<div class="upper-footer-container-left">
+					<h2 class="footer-title">Il tuo posto per parlare</h2>
+					<img alt="bandiera" src="./img/ita.png">
+					<span class="lignua"> Italiano ˅</span>
+				</div>
+				<div class="upper-footer-container-right">
+					<h2 class="footer-title">Prodotto</h2>
+					<a class="footer-link" href="url">Scarica</a>
+					<a class="footer-link" href="url">Perchè Discord</a> 
+					<a class="footer-link" href="url">Nitro</a>
+					<a class="footer-link" href="url">Sicurezza</a>
+					<a class="footer-link" href="url">Assistenza</a>
+				</div>
+				<div class="upper-footer-container-right">
+					<h2 class="footer-title">Compagnia</h2>
+					<a class="footer-link" href="url">Chi siamo</a>
+					<a class="footer-link" href="url">Lavora con noi</a> 
+					<a class="footer-link" href="url">Marchio</a>
+					<a class="footer-link" href="url">Redazione</a>
+					<a class="footer-link" href="url">Negozio</a>
+				</div>
+				<div class="upper-footer-container-right">
+					<h2 class="footer-title">Risorse</h2>
+					<a class="footer-link" href="url">Scarica</a>
+					<a class="footer-link" href="url">Perchè Discord</a> 
+					<a class="footer-link" href="url">Nitro</a>
+					<a class="footer-link" href="url">Sicurezza</a>
+					<a class="footer-link" href="url">Assistenza</a>
+					<a class="footer-link" href="url">Scarica</a>
+					<a class="footer-link" href="url">Perchè Discord</a> 
+					<a class="footer-link" href="url">Nitro</a>
+					<a class="footer-link" href="url">Sicurezza</a>
+					<a class="footer-link" href="url">Assistenza</a>
+					<a class="footer-link" href="url">Assistenza</a>
+				</div>
+				<div class="upper-footer-container-right">
+					<h2 class="footer-title">Norme</h2>
+					<a class="footer-link" href="url">Scarica</a>
+					<a class="footer-link" href="url">Perchè Discord</a> 
+					<a class="footer-link" href="url">Nitro</a>
+					<a class="footer-link" href="url">Sicurezza</a>
+					<a class="footer-link" href="url">Assistenza</a>
+				</div>
+			</div>
+		</div>
+
+		<!-- BOTTOM FOOTER -->
+		<div class="bottom-footer-container">
+			<div class="bottom-footer-left-section">
+				<img src="./img/logo.svg">
+			</div>
+			<div class="bottom-footer-right-section">
+				<button class="register-button">Registrati</button>
+			</div>
+		</div>
+	</footer>
+
+</body> 
 </html>
